First skeleton of the simulator.